# violat

./: .gitignore  CMakeLists.txt  Contributors.txt  Dependencies.txt  LICENSE  README.md
cmake/: FindGObject.cmake  FindGStreamer.cmake
src/: violat.c
